@@ -3,6 +3,7 @@
 	  MONSTERCOLOR=acid blob:lightcyan
 	* Fixed crashes when attacking long worms on flipped levels
 	* HTML dump: output IBMgraphics and DECgraphics characters
+	* HTML dump: fix crash if monster name is too long
 
 	* patches:
 	  - DYWYPISI? (by Jafet)
